# imgutils

./: Cargo.toml  LICENSE-MIT  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yml
src/: main.rs
src/commands/: details.rs  dimensions.rs  mod.rs
src/commands/modify/: blur.rs  brighten.rs  contrast.rs  crop.rs  flip.rs  format.rs  grayscale.rs  hue.rs  invert.rs  mod.rs  reformat.rs  resize.rs  rotate.rs
