[package]
version = "0.1.4"
name = "imgutils"
description = "Cross-platform CLI for quickly parsing & manipulating images."
authors = ["Blooym"]
categories = ["command-line-utilities", "multimedia::images"]
license = "MIT OR Apache-2.0"
keywords = ["image", "cli"]
repository = "https://github.com/Blooym/imgutils"
rust-version = "1.85"
edition = "2024"

[[bin]]
name = "imgutils"

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
anyhow = { version = "1.0.96", features = ["backtrace"] }
clap = { version = "4.5.30", features = ["derive"] }
image = "0.25.5"
indicatif = "0.17.11"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# Which actions to run on pull requests
pr-run-mode = "skip"
